[metadata]
name = pwdtools
version = attr: pwdtools.__version__
author = Ari Archer
author_email = ari.web.xyz@gmail.com
url = https://ari-web.xyz/gh/pwdtools
description = tools for password generation, management and checking
long_description = file: README.md
long_description_content_type = text/markdown
keywords = armour, passwords, password generation, password manager, password database, pdb, cryptography, hashing
license = GPLv3+
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Database
    Topic :: File Formats
    Topic :: Security
    Topic :: Security :: Cryptography
    Typing :: Typed

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    armour

[options.entry_points]
console_scripts =
    pwdgen = pwdtools.pwdgen:main
    pwdinfo = pwdtools.pwdinfo:main
    pwdzxc = pwdtools.pwdzxc:main
    pwdmgr = pwdtools.pwdmgr:main

[options.package_data]
* = *.typed

[bdist_wheel]
universal = 1
